load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:libraries.bzl", "combine_fabric_libraries")
load("//combine:properties.bzl", "combine_version")
load("//rule:merge_jar.bzl", "merge_jar")
load("//rule:merge_library.bzl", "merge_library_jar")
load("//rule/fabric:merge_jij.bzl", "fabric_merge_jij")
load("//touchcontroller:libraries.bzl", "touchcontroller_fabric_libraries")
load("//touchcontroller:properties.bzl", "touchcontroller_authors", "touchcontroller_contributors", "touchcontroller_description", "touchcontroller_fabric_game_versions", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_license", "touchcontroller_source", "touchcontroller_version")

expand_template(
    name = "fabric_mod_json",
    out = "fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${description}": touchcontroller_description,
        "${combine_version}": combine_version,
        '"mod_authors_array"': json.encode(touchcontroller_authors),
        '"mod_contributors_array"': json.encode(touchcontroller_contributors),
        '"mod_game_versions_array"': json.encode(touchcontroller_fabric_game_versions),
    },
    template = "resources/fabric.mod.json",
    visibility = ["//touchcontroller:__subpackages__"],
)

merge_jar(
    name = "fabric_unmerged",
    resources = {
        ":fabric_mod_json": "touchcontroller/fabric",
    },
    deps = ["//touchcontroller/common:common_merged"],
)

fabric_merge_jij(
    name = "fabric",
    input = ":fabric_unmerged",
    visibility = ["//visibility:public"],
    deps = {
        "//combine/theme/blackstone:blackstone_common": "combine-theme-blackstone:=",
        "//combine/theme/blackstone:blackstone_vanilla": "combine-theme-blackstone-vanilla:=",
        "//combine/theme/blackstone:blackstone_atlas": "combine-theme-blackstone-atlas:=",
        "//combine/backend/minecraft/fabric:fabric_unmerged": "combine:=",
        "//combine/backend/minecraft/fabric/1.21.1": "combine-1-21-1:=",
        "//combine/backend/minecraft/fabric/1.21.10": "combine-1-21-10:=",
        "//combine/backend/minecraft/fabric/1.21.11": "combine-1-21-11:=",
        "//combine/backend/minecraft/versions/26.1:26.1_merged": "combine-26.1:=",
        "//touchcontroller/api": "touchcontroller-api:=",
        "//touchcontroller/resources/lang": "touchcontroller-lang-modern:=",
        "//touchcontroller/resources/texture:texture_common": "touchcontroller-texture:=",
        "//touchcontroller/resources/texture:texture_vanilla": "touchcontroller-texture-vanilla:=",
        "//touchcontroller/resources/texture:texture_atlas": "touchcontroller-texture-atlas:=",
        "//touchcontroller/versions/fabric/1.21.1": "touchcontroller-1-21-1:=",
        "//touchcontroller/versions/fabric/1.21.10": "touchcontroller-1-21-10:=",
        "//touchcontroller/versions/fabric/1.21.11": "touchcontroller-1-21-11:=",
        "//touchcontroller/versions/26.1": "touchcontroller-26-1:=",
        "//touchcontroller/versions/fabric/26.1": "touchcontroller-26-1-fabric:=",
    } | combine_fabric_libraries | touchcontroller_fabric_libraries,
)
