load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:libraries.bzl", "combine_unified_deps", "combine_unified_neoforge")
load("//combine:properties.bzl", "combine_version")
load("//rule:unified_jar.bzl", "unified_jar")
load("//touchcontroller:libraries.bzl", "touchcontroller_common_deps", "touchcontroller_neoforge_config", "touchcontroller_neoforge_deps", "touchcontroller_unified_deps", "touchcontroller_unified_neoforge")
load("//touchcontroller:properties.bzl", "touchcontroller_authors", "touchcontroller_contributors", "touchcontroller_description", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_license", "touchcontroller_source", "touchcontroller_version")

expand_template(
    name = "neoforge_mod_toml",
    out = "META-INF/neoforge.mods.toml",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${description}": touchcontroller_description,
        "${combine_version}": combine_version,
        "${mod_authors}": ", ".join(touchcontroller_authors),
        "${mod_contributors}": ", ".join(touchcontroller_contributors),
    },
    template = "resources/neoforge.mods.toml",
    visibility = [
        "//touchcontroller:__pkg__",
        "//touchcontroller/neoforge:__pkg__",
    ],
)

copy_file(
    name = "icon",
    src = "//touchcontroller/resources/texture:icon",
    out = "assets/touchcontroller/textures/icon.png",
    is_executable = False,
)

unified_jar(
    name = "neoforge",
    neoforge_deps = touchcontroller_neoforge_config | combine_unified_neoforge | touchcontroller_unified_neoforge,
    neoforge_mod_toml = ":neoforge_mod_toml",
    resources = {
        ":icon": "touchcontroller/neoforge",
    },
    visibility = ["//visibility:public"],
    deps = touchcontroller_common_deps | touchcontroller_neoforge_deps | combine_unified_deps | touchcontroller_unified_deps,
)
