load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:libraries.bzl", "combine_unified_deps", "combine_unified_fabric", "combine_unified_neoforge")
load("//combine:properties.bzl", "combine_description", "combine_home_page", "combine_issue_tracker", "combine_license", "combine_sources_page", "combine_version")
load("//rule:merge_jar.bzl", "merge_jar")
load("//rule:merge_library.bzl", "merge_library_jar")
load("//rule:unified_jar.bzl", "unified_jar")

merge_library_jar(
    name = "minecraft_unmerged",
    aspect = True,
    aspect_class = "top.fifthlight.combine.AspectProvider",
    visibility = ["//visibility:public"],
    deps = [
        "//combine",
        "//combine/item",
    ],
)

expand_template(
    name = "fabric_mod_json",
    out = "fabric.mod.json",
    substitutions = {
        "${version}": combine_version,
        "${license}": combine_license,
        "${description}": combine_description,
        "${home_page}": combine_home_page,
        "${sources_page}": combine_sources_page,
        "${issue_tracker}": combine_issue_tracker,
    },
    template = "resources/fabric.mod.json",
)

merge_jar(
    name = "minecraft_common",
    resources = {
        ":fabric_mod_json": "combine/backend/minecraft",
        "//combine/backend/minecraft/neoforge:neoforge_mod_toml": "combine/backend/minecraft/neoforge",
        "//combine/resources:icon": ".",
    },
    visibility = ["//visibility:public"],
    deps = [":minecraft_unmerged"],
)

merge_jar(
    name = "minecraft_common_standalone",
    resources = {
        "//combine/backend/minecraft/fabric:fabric_mod_json": "combine/backend/minecraft/fabric",
        "//combine/backend/minecraft/neoforge:neoforge_mod_toml": "combine/backend/minecraft/neoforge",
        "//combine/resources:icon": ".",
    },
    visibility = ["//visibility:public"],
    deps = [":minecraft_unmerged"],
)

unified_jar(
    name = "combine_neoforge_libraries",
    neoforge_deps = combine_unified_neoforge,
    visibility = ["//visibility:public"],
    deps = combine_unified_deps,
)

unified_jar(
    name = "minecraft",
    fabric_deps = {
        "combine-common": "=",
        "combine-26-1": "=",
        "combine-26-2": "=",
        "combine-fabric-1-21-1": "=",
        "combine-fabric-1-21-8": "=",
        "combine-fabric-1-21-10": "=",
        "combine-fabric-1-21-11": "=",
    } | combine_unified_fabric,
    fabric_mod_json = "//combine/backend/minecraft/fabric:fabric_mod_json",
    neoforge_deps = {
        "combine-common": ["common"],
        "combine-neoforge-1-21-1": ["1.21.1"],
        "combine-neoforge-1-21-8": ["1.21.8"],
        "combine-neoforge-1-21-10": ["1.21.10"],
        "combine-neoforge-1-21-11": ["1.21.11"],
        "combine-26-1": [
            "26.1",
            "26.1.1",
            "26.1.2",
        ],
        "combine-26-2": ["26.2"],
    } | combine_unified_neoforge,
    neoforge_mod_toml = "//combine/backend/minecraft/neoforge:neoforge_mod_toml",
    resources = {
        "//combine/resources:icon": ".",
    },
    visibility = ["//visibility:public"],
    deps = {
        "combine-common": ":minecraft_common",
        "combine-26-1": "//combine/backend/minecraft/versions/26.1:26.1_merged",
        "combine-26-2": "//combine/backend/minecraft/versions/26.2:26.2_merged",
        "combine-fabric-1-21-1": "//combine/backend/minecraft/fabric/1.21.1",
        "combine-fabric-1-21-8": "//combine/backend/minecraft/fabric/1.21.8",
        "combine-fabric-1-21-10": "//combine/backend/minecraft/fabric/1.21.10",
        "combine-fabric-1-21-11": "//combine/backend/minecraft/fabric/1.21.11",
        "combine-neoforge-1-21-1": "//combine/backend/minecraft/neoforge/1.21.1",
        "combine-neoforge-1-21-8": "//combine/backend/minecraft/neoforge/1.21.8",
        "combine-neoforge-1-21-10": "//combine/backend/minecraft/neoforge/1.21.10",
        "combine-neoforge-1-21-11": "//combine/backend/minecraft/neoforge/1.21.11",
    } | combine_unified_deps,
)
