load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "data",
    srcs = glob(["*.kt"]),
    expect = True,
    javac_opts = "//combine:javac_opts_jvm_8",
    kotlinc_opts = "//combine:kotlinc_opts_jvm_8",
    visibility = ["//visibility:public"],
    deps = [
        "//:compose",
        "//:kotlin_serialization",
        "@maven//:androidx_compose_runtime_runtime_annotation_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)
