load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "layout",
    srcs = glob(["*.kt"]),
    javac_opts = "//combine:javac_opts_jvm_8",
    kotlinc_opts = "//combine:kotlinc_opts_jvm_8",
    merge_deps = [
        "//combine/core/layout/constraints",
        "//combine/core/layout/measure",
        "//combine/core/modifier",
        "//combine/core/node",
        "//combine/data",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:compose",
        "@maven//:androidx_compose_runtime_runtime_annotation_jvm",
    ],
)
