load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "screen",
    srcs = glob(["*.kt"]),
    expect = True,
    javac_opts = "//combine:javac_opts_jvm_8",
    kotlinc_opts = "//combine:kotlinc_opts_jvm_8",
    merge_deps = [
        "//combine/core/data",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:compose",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
